--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles/portfolio.css">
+    <script src="https://kit.fontawesome.com/1f9b7b23f7.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -30,9 +31,9 @@
                 <p class="banner-description">Shot what able cold new see hold.Friendly as an betrayed formerly he.
                     Morning because as to society
                     behaved moments.</p>
-                <button class="btn-primary">Download CV</button>
+                <button class="btn-primary"><i class="fa-solid fa-download"></i> Download CV</button>
             </div>
-            <img src="images/hardy.png" alt="">
+            <img src="images/IMG-removebg.png" height="100%" width="50%" alt="">
         </div>
     </header>
     <main>
